# HistoryNeRF

./: Dockerfile  README.md  gaussian_splatting_restructure_folders.py  pyproject.toml
.devcontainer/: devcontainer.json
archive/configs/pose_config/: colmap.yaml  openmvg.yaml
archive/pose_estimation/: base.py  colmap.py  run.py
archive/pose_estimation/utils/: data_preprocessing.py
configs/: defaults.yaml  parent.yaml  parent_goldstandard.yaml  parent_splitdata.yaml
configs/data_preparation/: data_preparation.yaml
configs/data_preparation/sampling/: sampling.yaml
configs/evaluation/: evaluation.yaml
configs/nerf/: nerf.yaml
configs/pose_config/: colmap.yaml  shared.yaml
configs/pose_estimation/: pose_estimation.yaml
configs/run/evaluation/: evaluation.yaml
configs/splitdata/: split_data.yaml
historynerf/: colmap_load.py  config.py  data_preparation.py  eval_utils.py  multiple_experiments_run.py  nerfstudio_wrapper.py  run.py  run_evaluation.py  run_goldstandard.py  run_splitdata.py  split_data.py  studionerf_wrapper.py  utils.py
historynerf/archive/configs/: parent.yaml
historynerf/archive/demos/: colmap_streamlit.py
historynerf/data/: preprocessing.py
historynerf/demos/: streamlit_dino.py  streamlit_old_petrol_pumps.py  streamlit_results.py  streamlit_results_alignment.py  streamlit_tests.py  utils.py
historynerf/evaluation/: __init__.py  alignment.py  colmap.py  nerf.py  nerf_tests.py
historynerf/pose_estimation/: __init__.py  base.py  colmap.py  configs.py  evaluation.py  openmvg.py  run.py  utils.py
(+1 files in other folders)
