[tool.poetry]
name = "historynerf"
version = "0.1.0"
description = ""
authors = ["Sara Romiti"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
hydra-core = "^1.3.2"
numpy = "^1.24.3"
omegaconf = "^2.3.0"
wandb = "^0.15.3"
pyyaml = ">=6.0"
streamlit = "^1.22.0"
streamlit-plotly-events = "^0.0.6"
bokeh = "2.4.3"
streamlit-bokeh-events = "^0.1.2"
opencv-python = "4.6.0.66"
coolname = "^2.2.0"
seaborn = "^0.12.2"
torchtyping = "^0.1.4"
streamlit-image-comparison = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hn_pose = "historynerf.pose_estimation.run:main"
